--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,16 @@
 version: '3.8'
 
 services:
-  incident-api:
-    build: . 
-    container_name: incident-api
-    ports:
-      - "3000:3000"
-    enviornment:
-      MONGO_URL: mongodb://root:example@mongo/
-      PORT: 3000
-    depends_on:
-      - mongo
+  # incident-api:
+  #   image: jaramillojst/incidentapi:latest
+  #   container_name: incident-api
+  #   ports:
+  #     - "3000:3000"
+  #   environment:
+  #     MONGO_URL: mongodb://root:example@mongo/
+  #     PORT: 3000
+  #   depends_on:
+  #     - mongo
 
   mongo: 
     image: mongo
