--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,20 @@
 version: '3.8'
 
 services:
-  # incident-api:
-  #   image: jaramillojst/incidentapi:latest
-  #   container_name: incident-api
-  #   ports:
-  #     - "3000:3000"
-  #   environment:
-  #     MONGO_URL: mongodb://root:example@mongo/
-  #     PORT: 3000
-  #   depends_on:
-  #     - mongo
+  incident-api:
+    image: jaramillojst/incidentapi:latest
+    container_name: incident-api
+    ports:
+      - "3000:3000"
+    environment:
+      MONGO_URL: ${MONGO_URL_DOCKER}
+      PORT: ${PORT}
+      MAIL_SECRET_KEY: ${MAIL_SECRET_KEY}
+      MAIL_SERVICE: ${MAIL_SERVICE}
+      MAIL_USER: ${MAIL_USER}
+      MAPBOX_ACCESS_TOKEN: ${MAPBOX_ACCESS_TOKEN}
+    depends_on:
+      - mongo
 
   mongo: 
     image: mongo
